--- a/templates/emails/partials/base.html
+++ b/templates/emails/partials/base.html
@@ -160,7 +160,7 @@
                                     <tr>
                                         <td>
                                             <h4 style="font-size: 19px; font-weight: 700; margin: 0;">Shop From <span
-                                                    class="theme-color">OyaBuyNow</span></h4>
+                                                    class="theme-color">{{app_config.app_name}}</span></h4>
                                         </td>
                                     </tr>
                                 </table>
@@ -221,7 +221,7 @@
                                         <td>
 
                                             <h5 style="font-size: 13px; text-transform: uppercase; margin: 10px 0 0; color:#ddd;
-                                letter-spacing:1px; font-weight: 500;">2025 copyright by oyabuynow</h5>
+                                letter-spacing:1px; font-weight: 500;">2025 copyright by {{app_config.app_name}}</h5>
                                         </td>
                                     </tr>
                                 </table>
