--- a/templates/emails/welcome.html
+++ b/templates/emails/welcome.html
@@ -20,7 +20,7 @@
         <tr style="display: block;">
             <td style="display: block; text-align: center;">
                 <h3 style="font-weight: 700; font-size: 22px; margin: 0;">
-                    Welcome to Oyabuynow!
+                    Welcome to {{app_config.app_name}}!
                 </h3>
             </td>
 
@@ -73,7 +73,7 @@
                 Welcome aboard, and thank you for joining Our Marketplace.
             </p>
             <p style="font-size: 14px; color: #999;">
-                The Oyabuynow Team
+                The {{app_config.app_name}} Team
             </p>
         </td>
     </tr>
