--- a/templates/frontend/partials/base.html
+++ b/templates/frontend/partials/base.html
@@ -8,11 +8,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="OyaBuyNow">
-    <meta name="keywords" content="OyaBuyNow">
-    <meta name="author" content="OyaBuyNow">
+    <meta name="description" content="{{app_config.app_name}}">
+    <meta name="keywords" content="{{app_config.app_name}}">
+    <meta name="author" content="{{app_config.app_name}}">
     <link rel="icon" href="{% static 'frontend/assets/images/favicon/favicon.ico' %}" type="image/x-icon">
-    <title>{{ title }} | OyaBuyNow</title>
+    <title>{{ title }} | {{app_config.app_name}}</title>
 
     <!-- Google font -->
     <link rel="preconnect" href="https://fonts.gstatic.com/">
@@ -74,7 +74,7 @@
                             <div class="notification-slider">
                                 <div>
                                     <div class="timer-notification">
-                                        <h6><strong class="me-1">Welcome to OyaBuyNow!</strong>Wrap new offers/gift
+                                        <h6><strong class="me-1">Welcome to {{app_config.app_name}}!</strong>Wrap new offers/gift
                                             every single day on Weekends.<strong class="ms-1">New Coupon Code: Fast024
                                             </strong>
 
