--- a/templates/emails/order-success.html
+++ b/templates/emails/order-success.html
@@ -134,7 +134,7 @@
         <p
           style="font-size: 16px; font-weight: 600; width: 80%; margin: 8px auto 0; line-height: 1.6; color: #939393;">
           If you have any questions or concerns, feel free to contact our support team at
-          <a href="mailto:{{ support_email|default:'support@example.com' }}" style="color: #007bff; text-decoration: none;">{{ support_email|default:"support@example.com" }}</a>.
+          <a href="mailto:support@{{ app_config.domain_name }}" style="color: #007bff; text-decoration: none;">support@{{ app_config.domain_name }}</a>.
         </p>
       </td>
     </tr>
