--- a/templates/frontend/forgot-password.html
+++ b/templates/frontend/forgot-password.html
@@ -19,7 +19,7 @@
                     <div class="d-flex align-items-center justify-content-center h-100">
                         <div class="log-in-box">
                             <div class="log-in-title">
-                                <h3>Welcome To Oyabuynow</h3>
+                                <h3>Welcome To {{app_config.app_name}}</h3>
                                 <h4>Forgot your password?</h4>
                             </div>
 
